feat(core): 优化工具类并新增 JSON-RPC 功能
- 优化已有工具类,如 StringTool 和 GsonTool
- 新增多个工具类模块,包括 FtlTool、CookieTool、PageModel、CacheTool 和 IOTool
- 实现 JSON-RPC 客户端和服务器功能
- 更新相关测试用例
- 升级部分依赖版本:
  - slf4j-api: 2.0.16 -> 2.0.17
  - junit-jupiter: 5.11.4 -> 5.12.1
  - gson: 2.11.0 -> 2.12.1
  - poi: 5.3.0 -> 5.4.0
- 替换 slf4j-log4j12 为 slf4j-reload4j